# petrolog

./: README.md  pyproject.toml  requirements.txt
src/petrolog/: __init__.py  petrolog_module.py  petrolog_note.ipynb
